fix:overflow

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 body{
 	background-color: #1A5B35;
 	margin: 0;
-	overflow: hidden;
 
 }
 
